@@ -59,11 +59,11 @@ from a number of companies.  <P>
 Our process for developing and releasing ACE, TAO, and CIAO, as well
 as the role of major, minor, andmicro release kits is described in
 detail in the DOC group's <A
-HREF="https://svn.dre.vanderbilt.edu/viewvc/Middleware/trunk/ACE/docs/ACE-development-process.html?revision=HEAD">
+HREF="http://www.dre.vanderbilt.edu/~schmidt/DOC_ROOT/ACE/docs/ACE-development-process.html">
 development and release process</A> document.  Please check that
 document to decide which version below is more appropriate for your
 case.  You may want to understand the DOC group's <A
-HREF="https://svn.dre.vanderbilt.edu/viewvc/Middleware/trunk/ACE/docs/ACE-bug-process.html?revision=HEAD">
+HREF="http://www.dre.vanderbilt.edu/~schmidt/DOC_ROOT/ACE/docs/ACE-bug-process.html">
 bug fixing policies</A> when you make this decision.  </P>The full
 packages do contain all sources with pre generated makefiles for GNU
 make, Visual C++ 7.1/8.0/9.0, and GNU autoconf. The
@@ -76,7 +76,7 @@ Windows line feeds. For all other platforms download a .gz/.bz2 package.
 
 <UL>
 <LI> <B>Latest Micro Release Kit.</B> The latest <A
-    HREF="https://svn.dre.vanderbilt.edu/viewvc/Middleware/trunk/ACE/VERSION?revision=HEAD">version</a>
+    HREF="http://www.dre.vanderbilt.edu/~schmidt/DOC_ROOT/ACE/VERSION">version</a>
 of the ACE, TAO, and CIAO micro release kit is available for
     download below.  <P>
 
@@ -418,11 +418,11 @@ the links below to download it.
 
 <UL>
   <LI>The ACE+TAO Subversion repository can be browsed
-    <A HREF="https://svn.dre.vanderbilt.edu/viewvc/Middleware/trunk/">
+    <A HREF="http://www.dre.vanderbilt.edu/~schmidt/DOC_ROOT/">
       via the web</A>.
   </LI>
   <li>ACE+TAO+CIAO source code may be obtained from the 
-    <a href="https://svn.dre.vanderbilt.edu/viewvc/Middleware/trunk/ACE/ACE-INSTALL.html?revision=HEAD#power">Subversion repository</a>.</li>
+    <a href="http://www.dre.vanderbilt.edu/~schmidt/DOC_ROOT/ACE/ACE-INSTALL.html#power">Subversion repository</a>.</li>
   <LI>Commercially supported versions of ACE+TAO are available from
     <A HREF="http://www.dre.vanderbilt.edu/support.html">several companies</A>.
   <LI>RPMs for CentOS, Fedora, Mandriva, RHEL, SLE, and OpenSuSe are available from the 
