@@ -1,7 +1,14 @@
+Wed Sep 23 19:11:44 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * docs/Download.html:
+
+          Updated links to viewvc to point to Doug's webspace working copy
+          instead. 
+        
 Wed Sep 23 14:15:58 UTC 2009  Olli Savia  <ops@iki.fi>
 
         * configure.ac:
-          Changed ACE_CHECK_HAS_FUNCS(snprintf) to 
+          Changed ACE_CHECK_HAS_FUNCS(snprintf) to
           ACE_CHECK_LACKS_FUNCS(vsnprintf)
 
 Tue Sep 22 17:05:56 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
